mfmod/reports/Example Solow.log
Traceback (most recent call last):
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\ibhan\miniconda3\envs\mfbook\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
dfscenario = df.upd('LABOR_GROWTH + 0.002')  # create a new dataframe, increase LABOR_GROWTH by 0.002
scenario   = msolow(dfsce nario,keep='Higher labor growth ') # simulate the model 
------------------

[1;36m  File [1;32m"C:\Users\ibhan\AppData\Local\Temp\ipykernel_29572\4075971660.py"[1;36m, line [1;32m2[0m
[1;33m    scenario   = msolow(dfsce nario,keep='Higher labor growth ') # simulate the model[0m
[1;37m                              ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (4075971660.py, line 2)

